[gd_scene load_steps=15 format=2]

[ext_resource path="res://Gary.gd" type="Script" id=1]
[ext_resource path="res://Crosshair.png" type="Texture" id=2]
[ext_resource path="res://Crosshair.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.6
height = 2.0

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 2, 0.05, 0.0353553, 2, 0.0353553, 0.05, 2, 3.06162e-18, 0.0353553, 2, -0.0353553, 6.12323e-18, 2, -0.05, -0.0353553, 2, -0.0353553, -0.05, 2, -9.18485e-18, -0.0353553, 2, 0.0353553, -1.22465e-17, 2, 0.05, 0, 0, 0.05, 0.0353553, 0, 0.0353553, 0.05, 0, 3.06162e-18, 0.0353553, 0, -0.0353553, 6.12323e-18, 0, -0.05, -0.0353553, 0, -0.0353553, -0.05, 0, -9.18485e-18, -0.0353553, 0, 0.0353553, -1.22465e-17, 0, 0.05, 0, -2, 0.05, 0.0353553, -2, 0.0353553, 0.05, -2, 3.06162e-18, 0.0353553, -2, -0.0353553, 6.12323e-18, -2, -0.05, -0.0353553, -2, -0.0353553, -0.05, -2, -9.18485e-18, -0.0353553, -2, 0.0353553, -1.22465e-17, -2, 0.05, 0, 2, 0, 0, 2, 0.05, 0.0353553, 2, 0.0353553, 0.05, 2, 3.06162e-18, 0.0353553, 2, -0.0353553, 6.12323e-18, 2, -0.05, -0.0353553, 2, -0.0353553, -0.05, 2, -9.18485e-18, -0.0353553, 2, 0.0353553, -1.22465e-17, 2, 0.05, 0, -2, 0, 0, -2, 0.05, 0.0353553, -2, 0.0353553, 0.05, -2, 3.06162e-18, 0.0353553, -2, -0.0353553, 6.12323e-18, -2, -0.05, -0.0353553, -2, -0.0353553, -0.05, -2, -9.18485e-18, -0.0353553, -2, 0.0353553, -1.22465e-17, -2, 0.05 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 3 )
top_radius = 0.05
bottom_radius = 0.05
height = 4.0
radial_segments = 8
rings = 1

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
render_priority = 1
flags_transparent = true
albedo_color = Color( 0, 0.0862745, 1, 0.25098 )

[sub_resource type="SpatialMaterial" id=7]
render_priority = 1
flags_transparent = true
albedo_color = Color( 0.0627451, 0.894118, 0.0666667, 0.505882 )

[sub_resource type="CylinderMesh" id=8]
material = SubResource( 7 )
top_radius = 0.05
bottom_radius = 0.05
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 5, 0.2, 5 )

[sub_resource type="ConvexPolygonShape" id=11]
points = PoolVector3Array( -2.5, 0.1, 2.5, 2.5, 0.1, -2.5, 2.5, 0.1, 2.5, -2.5, 0.1, -2.5, -2.5, -0.1, 2.5, 2.5, -0.1, -2.5, 2.5, -0.1, 2.5, -2.5, -0.1, -2.5, 2.5, 0.1, 2.5, -2.5, 0.1, -2.5, 2.5, 0.1, -2.5, -2.5, 0.1, 2.5, 2.5, -0.1, 2.5, -2.5, -0.1, -2.5, 2.5, -0.1, -2.5, -2.5, -0.1, 2.5, 2.5, 0.1, 2.5, -2.5, -0.1, 2.5, -2.5, 0.1, 2.5, 2.5, -0.1, 2.5, 2.5, 0.1, -2.5, -2.5, -0.1, -2.5, -2.5, 0.1, -2.5, 2.5, -0.1, -2.5 )

[node name="Gary" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Capsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="FirstPersonCamera" type="Camera" parent="Head"]
current = true
fov = 42.0
near = 0.01
far = 5000.0

[node name="OmniLight" type="OmniLight" parent="."]
visible = false
light_energy = 1.67
omni_range = 25.0

[node name="ManipulatorCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -1.5, -3.5 )
shape = SubResource( 2 )

[node name="ManipulatorMeshes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )

[node name="ManipulatorMesh" type="MeshInstance" parent="ManipulatorMeshes"]
transform = Transform( 1, -2.98023e-08, 0, 0, -1.62921e-07, -1, 2.98023e-08, 1, -1.62921e-07, 1.19209e-06, 0, -3.5 )
mesh = SubResource( 4 )
material/0 = null

[node name="ManipulatorTip" type="MeshInstance" parent="ManipulatorMeshes"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 9.53674e-07, 0, -5.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="ManipulatorExtension" type="MeshInstance" parent="ManipulatorMeshes"]
transform = Transform( 1, -2.98023e-08, 0, 0, -1.62921e-07, -1, 2.98023e-08, 1, -1.62921e-07, 0, 0, -6.5 )
mesh = SubResource( 8 )
material/0 = null

[node name="RMBManipulatorMeshes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )

[node name="Plate" type="MeshInstance" parent="RMBManipulatorMeshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.37924, -10.7638 )
mesh = SubResource( 10 )
material/0 = null

[node name="RMBManipulatorCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.9, -10.764 )
visible = false
shape = SubResource( 11 )

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( 500, 300 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
